--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@supabase/supabase-js": "^2.45.4",
     "@uploadthing/react": "^7.0.3",
     "class-variance-authority": "^0.7.0",
